--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "barbarianChallenge",
-  "description": "Barbarian Group Coding Challenge",
+  "name": "noop",
+  "description": "noop default",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "maintainers": [
